--- a/html/settings.html
+++ b/html/settings.html
@@ -28,7 +28,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 p-10 c-black rad-6"
-              href="index.html"
+              href="../index.html"
             >
               <i class="fa-regular fa-chart-bar fa-fw"></i>
               <span>Dashboard</span>
@@ -354,6 +354,6 @@
     <span id="scroll-top">
       <i class="fas fa-long-arrow-alt-up"></i>
     </span>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
