--- a/html/projects.html
+++ b/html/projects.html
@@ -28,7 +28,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 p-10 c-black rad-6"
-              href="index.html"
+              href="../index.html"
             >
               <i class="fa-regular fa-chart-bar fa-fw"></i>
               <span>Dashboard</span>
