--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <!-- Font awesome library -->
-    <link rel="stylesheet" href="../css files/all.min.css" />
+    <link rel="stylesheet" href="css files/all.min.css" />
     <!-- framework.css -->
-    <link rel="stylesheet" href="../css files/framework.css" />
+    <link rel="stylesheet" href="css files/framework.css" />
     <!-- master.css -->
-    <link rel="stylesheet" href="../css files/master.css" />
+    <link rel="stylesheet" href="css files/master.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,7 +37,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="settings.html"
+              href="html/settings.html"
             >
               <i class="fa-solid fa-gear fa-fw"></i>
               <span>Settings</span>
@@ -46,7 +46,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="profile.html"
+              href="html/profile.html"
             >
               <i class="fa-regular fa-user fa-fw"></i>
               <span>Profile</span>
@@ -55,7 +55,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="projects.html"
+              href="html/projects.html"
             >
               <i class="fa-solid fa-diagram-project fafw"></i>
               <span>Projects</span>
@@ -64,7 +64,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="courses.html"
+              href="html/courses.html"
             >
               <i class="fa-solid fa-graduation-cap fafw"></i>
               <span>Courses</span>
@@ -73,7 +73,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="friends.html"
+              href="html/friends.html"
             >
               <i class="fa-regular fa-circle-user fafw"></i>
               <span>Friends</span>
@@ -82,7 +82,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="files.html"
+              href="html/files.html"
             >
               <i class="fa-regular fa-file fa-fw"></i>
               <span>Files</span>
@@ -91,7 +91,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 c-black rad-6 p-10"
-              href="plans.html"
+              href="html/plans.html"
             >
               <i class="fa-regular fa-credit-card fafw"></i>
               <span>Plans</span>
@@ -777,6 +777,6 @@
     <span id="scroll-top">
       <i class="fas fa-long-arrow-alt-up"></i>
     </span>
-    <script src="../main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
