--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <span class="p-relative">
               <i class="fa-regular fa-bell fa-lg"></i>
             </span>
-            <img decoding="async" src="../images/avatar.png" alt="avatar" />
+            <img decoding="async" src="images/avatar.png" alt="avatar" />
           </div>
         </div>
         <!-- End Content Header -->
@@ -130,13 +130,13 @@
               <img
                 decoding="async"
                 class="hide-mobile"
-                src="../images/welcome.png"
+                src="images/welcome.png"
                 alt=""
               />
             </div>
             <img
               decoding="async"
-              src="../images/avatar.png"
+              src="images/avatar.png"
               alt=""
               class="avatar"
             />
@@ -275,7 +275,7 @@
             <h2 class="mt-0 mb-20">Latest News</h2>
             <!-- row one -->
             <div class="news-row">
-              <img decoding="async" src="../images/news-01.png" alt="" />
+              <img decoding="async" src="images/news-01.png" alt="" />
               <div class="info">
                 <h3 class="m-0 mb-5">Created SASS Section</h3>
                 <p class="m-0 mb-10 fs-14 c-grey">
@@ -286,7 +286,7 @@
             </div>
             <!-- row two -->
             <div class="news-row">
-              <img decoding="async" src="../images/news-02.png" alt="" />
+              <img decoding="async" src="images/news-02.png" alt="" />
               <div class="info">
                 <h3 class="m-0 mb-5">Changed The Design</h3>
                 <p class="m-0 mb-10 fs-14 c-grey">A Brand New Website Design</p>
@@ -295,7 +295,7 @@
             </div>
             <!-- row three -->
             <div class="news-row d-flex align-center">
-              <img decoding="async" src="../images/news-03.png" alt="" />
+              <img decoding="async" src="images/news-03.png" alt="" />
               <div class="info">
                 <h3 class="m-0 mb-5">Team Increased</h3>
                 <p class="m-0 mb-10 fs-14 c-grey">
@@ -306,7 +306,7 @@
             </div>
             <!-- row four -->
             <div class="news-row d-flex align-center">
-              <img decoding="async" src="../images/news-04.png" alt="" />
+              <img decoding="async" src="images/news-04.png" alt="" />
               <div class="info">
                 <h3 class="m-0 mb-5">Added Payment Gateway</h3>
                 <p class="m-0 mb-10 fs-14 c-grey">
@@ -419,7 +419,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/pdf.svg"
+                    src="images/pdf.svg"
                     alt=""
                   />
                   <div>
@@ -435,7 +435,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/avi.svg"
+                    src="images/avi.svg"
                     alt=""
                   />
                   <div>
@@ -451,7 +451,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/psd.svg"
+                    src="images/psd.svg"
                     alt=""
                   />
                   <div>
@@ -467,7 +467,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/zip.svg"
+                    src="images/zip.svg"
                     alt=""
                   />
                   <div>
@@ -483,7 +483,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/dll.svg"
+                    src="images/dll.svg"
                     alt=""
                   />
                   <div>
@@ -499,7 +499,7 @@
                   <img
                     decoding="async"
                     class="mr-10"
-                    src="../images/eps.svg"
+                    src="images/eps.svg"
                     alt=""
                   />
                   <div>
@@ -534,7 +534,7 @@
             <img
               decoding="async"
               class="hide-mobile"
-              src="../images/project.png"
+              src="images/project.png"
               alt=""
             />
           </div>
@@ -586,7 +586,7 @@
           <div class="latest-post p-20 bg-white rad-10">
             <h2 class="mt-0 mb-25">Latest Post</h2>
             <div class="top d-flex align-center">
-              <img decoding="async" src="../images/avatar.png" alt="" />
+              <img decoding="async" src="images/avatar.png" alt="" />
               <div class="info">
                 <span class="d-block mb-5 fw-bold">Osama Elzero</span>
                 <span class="c-grey">About 3 Hours Ago</span>
@@ -673,10 +673,10 @@
                 <td>Ministry</td>
                 <td>$5300</td>
                 <td class="">
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-02.png" alt="" />
-                  <img decoding="async" src="../images/team-03.png" alt="" />
-                  <img decoding="async" src="../images/team-05.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-02.png" alt="" />
+                  <img decoding="async" src="images/team-03.png" alt="" />
+                  <img decoding="async" src="images/team-05.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-orange c-white">Pending</span>
@@ -689,9 +689,9 @@
                 <td>Elzero Company</td>
                 <td>$1500</td>
                 <td>
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-02.png" alt="" />
-                  <img decoding="async" src="../images/team-05.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-02.png" alt="" />
+                  <img decoding="async" src="images/team-05.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-blue c-white"
@@ -706,8 +706,8 @@
                 <td>Bouba</td>
                 <td>$800</td>
                 <td>
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-03.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-03.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-green c-white"
@@ -722,8 +722,8 @@
                 <td>Mahmoud</td>
                 <td>$600</td>
                 <td>
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-02.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-02.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-green c-white"
@@ -738,8 +738,8 @@
                 <td>Sayed</td>
                 <td>$300</td>
                 <td>
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-03.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-03.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-red c-white">Rejected</span>
@@ -752,10 +752,10 @@
                 <td>Arena Company</td>
                 <td>$2600</td>
                 <td>
-                  <img decoding="async" src="../images/team-01.png" alt="" />
-                  <img decoding="async" src="../images/team-02.png" alt="" />
-                  <img decoding="async" src="../images/team-03.png" alt="" />
-                  <img decoding="async" src="../images/team-04.png" alt="" />
+                  <img decoding="async" src="images/team-01.png" alt="" />
+                  <img decoding="async" src="images/team-02.png" alt="" />
+                  <img decoding="async" src="images/team-03.png" alt="" />
+                  <img decoding="async" src="images/team-04.png" alt="" />
                 </td>
                 <td class="text-c">
                   <span class="fs-13 btn-shape bg-green c-white"
