--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             </div>
             <a
-              href="profile.html"
+              href="html/profile.html"
               class="visit d-block fs-14 bg-blue c-white w-fit btn-shape"
               >Profile</a
             >
